--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     <section class="banner">
         <h2 class="banner__titulo">Já sabe por onde começar?</h2>
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-        <input type="search" class="banner__pesquisa" placeholder="Qual será sua proxima leitura?">
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
@@ -104,7 +104,7 @@
     </section>
 
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <h2 class="carrossel__titulo">Novos lançamentos</h2>
         <!-- Slider main container -->
         <div class="swiper">
             <!-- Additional required wrapper -->
@@ -141,7 +141,7 @@
                     </p>
                 </div>
                 <!-- 2º coluna -->
-                <img src="img/Juliana Agarikov.svg" class="descrição__imagem">
+                <img src="img/Escritora.svg" class="descrição__imagem">
             </div>
 
             <!-- 2º linha -->
@@ -157,32 +157,32 @@
         </div>
     </section>
 
-    <section class="topicos">
-        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-        <ul class="topicos__lista">
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Android</a>
+    <section class="tópicos">
+        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos__lista">
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Android</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Marketing Digital</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Marketing Digital</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Agile</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Agile</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Startups</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Startups</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">HTML e CSS</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">HTML e CSS</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Python</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Python</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">OO</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">OO</a>
             </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link">Java</a>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Java</a>
             </li>
         </ul>
     </section>
@@ -193,13 +193,11 @@
         <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
     </section>
 
-    <hr/>
+    <hr />
 
     <footer class="rodapé">
         <h2 class="rodapé__titulo">Grupo Alura</h2>
     </footer>
-
-    
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
